# industrial_core

./: .gitignore
industrial_msgs/: CMakeLists.txt  package.xml
industrial_msgs/msg/: CartesianTrajectoryPoint.msg
industrial_msgs/srv/: CmdCartesianTrajectory.srv
industrial_robot_client/: CMakeLists.txt
industrial_robot_client/include/industrial_robot_client/: trajectory_interface.h  trajectory_streamer.h
industrial_robot_client/src/: generic_trajectory_streamer_node.cpp  trajectory_interface.cpp  trajectory_streamer.cpp
industrial_robot_client/test/: test_move.py
simple_message/: CMakeLists.txt
simple_message/include/simple_message/: cartesian_traj_pt.h  orientation.h  position.h  simple_message.h
simple_message/include/simple_message/messages/: cartesian_traj_pt_message.h
simple_message/src/: cartesian_traj_pt.cpp  orientation.cpp  position.cpp  smpl_msg_connection.cpp
simple_message/src/messages/: cartesian_traj_pt_message.cpp
